changes o fix gallery popup on mobile

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1118,7 +1118,7 @@ a:active {
 
 .thumbnail-image {
     cursor: pointer;
-    /*height: 50px;*/
+    height: 50px;*/
     width: 50px;
     min-width: 50px;
     margin: 0.3em 2px 0px 0.3em;
